--- a/WebMessenger/src/main/resources/com/ysr/WebMessenger/SayfaGiris.html
+++ b/WebMessenger/src/main/resources/com/ysr/WebMessenger/SayfaGiris.html
@@ -31,9 +31,7 @@
          <vaadin-label style-name="huge" plain-text>
            Hesap Aç 
          </vaadin-label>
-         <vaadin-text-field caption="Ad" responsive></vaadin-text-field>
-         <vaadin-text-field caption="Soyad"></vaadin-text-field>
-         <vaadin-text-field caption="Şifre"></vaadin-text-field>
+         <vaadin-text-field caption="Nick" responsive></vaadin-text-field>
          <vaadin-text-field caption="IP"></vaadin-text-field>
          <vaadin-button plain-text>
            Hesap Oluştur 
